--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -53,7 +53,7 @@
     <div class="row align-items-center justify-content-between">
     <nav id="nav-menu-container">
     <ul class="nav-menu sf-js-enabled sf-arrows" style="touch-action: pan-y;">
-    <li class="menu-active"><a href="https://preview.colorlib.com/theme/magazine/index.html">Home</a></li>
+    <li class="menu-active"><a href="/home">Home</a></li>
     <li><a href="https://preview.colorlib.com/theme/magazine/archive.html">Archive</a></li>
     <li><a href="https://preview.colorlib.com/theme/magazine/category.html">Category</a></li>
     <li class="menu-has-children"><a href="https://preview.colorlib.com/theme/magazine/" class="sf-with-ul">Post Types</a>
