--- a/core/templates/detailnews.html
+++ b/core/templates/detailnews.html
@@ -54,9 +54,9 @@
     <h3>{{ news.title }}</h3>
     </a>
     <ul class="meta pb-20">
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-user"></span>{{ news.owner }}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-calendar-full"></span>{{ news.created_at }}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><span class="lnr lnr-bubble"></span>06 </a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ news.owner }}</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ news.created_at }}</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 </a></li>
     </ul>
 
     <p>
