--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -45,10 +45,10 @@
 <h3>{{i.title|truncatechars:40}}</h3>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-user"></span>{{i.owner}}</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>{{i.created_at}}</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06 Comments</a></li>
-</ul>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ i.owner }}</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+    </ul>   
 </div>
 
 
@@ -79,10 +79,10 @@
     <h4>{{ i.title|truncatechars:40 }} </h4>
     </a>
     <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-user"></span>{{ i.owner }}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>{{ i.created_at }}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06 Comments</a></li>
-    </ul>
+        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ i.owner }}</a></li>
+        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
+        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+        </ul>
     </div>
     </div>
 
@@ -106,9 +106,9 @@
 <h4>{{ i.title|truncatechars:40 }} </h4>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-user"></span>{{ i.owner }}</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>{{ i.created_at }}</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06 Comments</a></li>
+<li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ i.owner }}</a></li>
+<li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
+<li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
 </ul>
 </div>
 </div>
@@ -130,7 +130,7 @@
 
 <div class="col-lg-12">
 <div class="news-tracker-wrap">
-<h6><span>Breaking News:</span> <a href="https://preview.colorlib.com/theme/magazine/#">Astronomy Binoculars A Great Alternative</a></h6>
+<h6><span style="color: black;">Daha çox xəbər üçün</span> <a href="/news" style="color: red;">bura tıklayın</a></h6>
 </div>
 </div>
 
@@ -168,9 +168,9 @@
 <h4>{{i.title}}</h4>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-user"></span>{{i.owner}}</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>{{i.created_at}}</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06 Comments</a></li>
+<li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{i.owner}}</a></li>
+<li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{i.created_at}}</a></li>
+<li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
 </ul>
 <p class="excert">
 {{i.descrtiption}}
@@ -282,10 +282,10 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 <h3>A Discount Toner Cartridge Is Better Than Ever.</h3>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-user"></span>Mark wiens</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06 Comments</a></li>
-</ul>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+    </ul>
 </div>
 </div>
 <div class="row mt-20 medium-gutters">
@@ -305,10 +305,10 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 Better Than Ever.</h4>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-user"></span>Mark wiens</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06 </a></li>
-</ul>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+    </ul>
 <p class="excert">
 Lorem ipsum dolor sit amet, consecteturadip isicing elit, sed do eiusmod tempor incididunt ed do eius.
 </p>
@@ -330,10 +330,10 @@ Lorem ipsum dolor sit amet, consecteturadip isicing elit, sed do eiusmod tempor 
 Better Than Ever.</h4>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-user"></span>Mark wiens</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06 </a></li>
-</ul>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+    </ul>
 <p class="excert">
 Lorem ipsum dolor sit amet, consecteturadip isicing elit, sed do eiusmod tempor incididunt ed do eius.
 </p>
@@ -362,10 +362,10 @@ Lorem ipsum dolor sit amet, consecteturadip isicing elit, sed do eiusmod tempor 
 Better Than Ever.</h4>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-user"></span>Mark wiens</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06 Comments</a></li>
-</ul>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+    </ul>
 <p class="excert">
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
 </p>
@@ -387,10 +387,10 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 Better Than Ever.</h4>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-user"></span>Mark wiens</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06 Comments</a></li>
-</ul>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+    </ul>
 <p class="excert">
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
 </p>
@@ -412,10 +412,10 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 Better Than Ever.</h4>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-user"></span>Mark wiens</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06 Comments</a></li>
-</ul>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+    </ul>
 <p class="excert">
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
 </p>
@@ -445,10 +445,10 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 Better Than Ever.</h4>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-user"></span>Mark wiens</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06 </a></li>
-</ul>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+    </ul>
 <p class="excert">
 Lorem ipsum dolor sit amet, consecteturadip isicing elit, sed do eiusmod tempor incididunt ed do eius.
 </p>
@@ -462,9 +462,10 @@ Lorem ipsum dolor sit amet, consecteturadip isicing elit, sed do eiusmod tempor 
 <a href="https://preview.colorlib.com/theme/magazine/image-post.html"><h6>Help Finding Information
 Online is so easy</h6></a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06</a></li>
-</ul>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+    </ul>
 </div>
 </div>
 <div class="single-post d-flex flex-row">
@@ -475,9 +476,10 @@ Online is so easy</h6></a>
 <a href="https://preview.colorlib.com/theme/magazine/image-post.html"><h6>Compatible Inkjet Cartr
 world famous</h6></a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06</a></li>
-</ul>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+    </ul>
 </div>
 </div>
 <div class="single-post d-flex flex-row">
@@ -488,9 +490,10 @@ world famous</h6></a>
 <a href="https://preview.colorlib.com/theme/magazine/image-post.html"><h6>5 Tips For Offshore Soft
 Development </h6></a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06</a></li>
-</ul>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
+    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+    </ul>
 </div>
 </div>
 </div>
