--- a/core/templates/news.html
+++ b/core/templates/news.html
@@ -61,10 +61,10 @@
     <h4>{{ i.title }}</h4>
     </a>
     <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/archive.html#"><span class="lnr lnr-user"></span>{{i.owner}}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/archive.html#"><span class="lnr lnr-calendar-full"></span>{{i.created_at}}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/archive.html#"><span class="lnr lnr-bubble"></span>06 Comments</a></li>
-    </ul>
+        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ i.owner }}</a></li>
+        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
+        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+        </ul> 
     <p class="excert">
     {{i.descrtiption}}
     </p>
