--- a/core/templates/detail_news.html
+++ b/core/templates/detail_news.html
@@ -71,86 +71,58 @@
     <div class="container">
     <div class="row flex-column">
     <h6>05 Comments</h6>
+
+
+        {% for comment in news.comment.all %}
+
+        {% if comment.approved_comment %}
     <div class="comment-list">
     <div class="single-comment justify-content-between d-flex">
     <div class="user justify-content-between d-flex">
     <div class="thumb">
-    <img src="{% static 'images/c1.jpg' %}" alt="" data-pagespeed-url-hash="2260931070" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+    <img style="width: 60px;"  src="https://us.123rf.com/450wm/tuktukdesign/tuktukdesign1608/tuktukdesign160800043/61010830-user-icon-man-profile-businessman-avatar-person-glyph-vector-illustration.jpg?ver=6" alt="" data-pagespeed-url-hash="2260931070" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
     </div>
     <div class="desc">
-    <h5><a href="https://preview.colorlib.com/theme/magazine/image-post.html#">Emilly Blunt</a></h5>
-    <p class="date">December 4, 2017 at 3:12 pm </p>
+    <h5><a href="https://preview.colorlib.com/theme/magazine/image-post.html#">{{ comment.name }}</a></h5>
+    <p class="date">{{ comment.created_at|timesince }} əvvəl </p>
     <p class="comment">
-    Never say goodbye till the end comes!
+        {{ comment.message|linebreaks }}
     </p>
     </div>
     </div>
-    <div class="reply-btn">
-    <a href="https://preview.colorlib.com/theme/magazine/image-post.html" class="btn-reply text-uppercase">reply</a>
+        <!-- <div class="reply-btn">
+        <a href="https://preview.colorlib.com/theme/magazine/image-post.html" class="btn-reply text-uppercase">reply</a>
+        </div> -->
     </div>
     </div>
-    </div>
-    <div class="comment-list left-padding">
-    <div class="single-comment justify-content-between d-flex">
-    <div class="user justify-content-between d-flex">
-    <div class="thumb">
-    <img src="{% static 'images/c2.jpg' %}" alt="" data-pagespeed-url-hash="2555430991" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-    </div>
-    <div class="desc">
-    <h5><a href="https://preview.colorlib.com/theme/magazine/image-post.html#">Emilly Blunt</a></h5>
-    <p class="date">December 4, 2017 at 3:12 pm </p>
-    <p class="comment">
-    Never say goodbye till the end comes!
-    </p>
-    </div>
-    </div>
-    <div class="reply-btn">
-    <a href="https://preview.colorlib.com/theme/magazine/image-post.html" class="btn-reply text-uppercase">reply</a>
-    </div>
-    </div>
-    </div>
-    <div class="comment-list">
-    <div class="single-comment justify-content-between d-flex">
-    <div class="user justify-content-between d-flex">
-    <div class="thumb">
-    <img src="{% static 'images/c3.jpg' %}" alt="" data-pagespeed-url-hash="2849930912" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-    </div>
-    <div class="desc">
-    <h5><a href="https://preview.colorlib.com/theme/magazine/image-post.html#">Emilly Blunt</a></h5>
-    <p class="date">December 4, 2017 at 3:12 pm </p>
-    <p class="comment">
-    Never say goodbye till the end comes!!
-    </p>
-    </div>
-    </div>
-    <div class="reply-btn">
-    <a href="https://preview.colorlib.com/theme/magazine/image-post.html" class="btn-reply text-uppercase">reply</a>
-    </div>
-    </div>
-    </div>
+
+    {% endif %}
+
+    {% endfor %}
+   
+    
     </div>
     </div>
     </div>
     </div>
     <div class="comment-form">
     <h4>Post Comment</h4>
-    <form>
-    <div class="form-group form-inline">
-    <div class="form-group col-lg-6 col-md-12 name">
-    <input type="text" class="form-control" id="name" placeholder="Enter Name" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter Name&#39;">
-    </div>
-    <div class="form-group col-lg-6 col-md-12 email">
-    <input type="email" class="form-control" id="email" placeholder="Enter email address" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Enter email address&#39;">
-    </div>
-    </div>
-    <div class="form-group">
-    <input type="text" class="form-control" id="subject" placeholder="Subject" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Subject&#39;">
-    </div>
-    <div class="form-group">
-    <textarea class="form-control mb-10" rows="5" name="message" placeholder="Messege" onfocus="this.placeholder = &#39;&#39;" onblur="this.placeholder = &#39;Messege&#39;" required=""></textarea>
-    </div>
-    <a href="https://preview.colorlib.com/theme/magazine/image-post.html#" class="primary-btn text-uppercase">Post Comment</a>
-    </form>
+
+
+
+
+
+
+
+
+    {% include 'forms.html' %} 
+
+
+
+
+
+
+
     </div>
     </div>
     
