--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -70,13 +70,13 @@
     </ul>
     </nav>
     <div class="navbar-right">
-    <form class="Search">
-    <input type="text" class="form-control Search-box" name="Search-box" id="Search-box" placeholder="Search">
+    <form class="Search" action="" method="GET" role="search">
+    <input type="text" class="form-control Search-box" name="q" id="Search-box" placeholder="Search" value="">
     <label for="Search-box" class="Search-box-label">
-    <span class="lnr lnr-magnifier"></span>
+      <a href="/search">  <i style="font-size: 20px; margin-top: 7px;" class="fa-solid fa-magnifying-glass"></i> </a>
     </label>
     <span class="Search-close">
-    <span class="lnr lnr-cross"></span>
+        <i style="font-size: 20px; margin-top: 7px;" class="fa-solid fa-circle-xmark"></i>
     </span>
     </form>
     </div>
