--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -27,7 +27,7 @@
 
 
 
-{% for i in article %}
+{% for i in news %}
 
 <div class="col-lg-8 top-post-left" style="margin-top: 1px;">
 
@@ -63,7 +63,7 @@
 <div class="col-lg-4 top-post-right" style="margin-top: -10px; ">
 
 
-{% for i in article2 %}
+{% for i in news2 %}
 
 
 <div class="single-top-post mt-10" >
@@ -91,7 +91,7 @@
 
 
 
-{% for i in article3 %}
+{% for i in news3 %}
 
 <div class="single-top-post mt-10" >
 <div class="feature-image-thumb relative">
@@ -149,9 +149,9 @@
 
     
     <div class="latest-post-wrap">
-        <h4 class="cat-title">Latest News</h4>
+        <h4 class="cat-title">Son Məqalələr</h4>
         
-        {% for i in article %}
+        {% for i in article  %}
 
 <div class="single-latest-post row align-items-center">
 <div class="col-lg-5 post-left">
@@ -164,8 +164,8 @@
 </ul>
 </div>
 <div class="col-lg-7 post-right">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html">
-<h4>{{i.title}}</h4>
+<a href="{{i.get_absolute_url}}">
+<h4>{{i.title|truncatechars:40 }}</h4>
 </a>
 <ul class="meta">
 <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{i.owner}}</a></li>
@@ -173,89 +173,21 @@
 <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
 </ul>
 <p class="excert">
-{{i.descrtiption}}
+{{i.descrtiption|truncatechars:150}}
 </p>
 </div>
 </div>
 
 {% endfor %}
 
-<!-- <div class="single-latest-post row align-items-center">
-<div class="col-lg-5 post-left">
-<div class="feature-img relative">
-<div class="overlay overlay-bg"></div>
-<img class="img-fluid" src="../static/images/l2.jpg" alt="" data-pagespeed-url-hash="2879903153" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+<div class="col-lg-12" style="margin-top: 15px;">
+    <div class="news-tracker-wrap">
+    <h6><span style="color: black;">Daha çox məqalə üçün</span> <a href="/article" style="color: red;">bura tıklayın</a></h6>
+    </div>
+    </div>
+
 </div>
-<ul class="tags">
-<li><a href="https://preview.colorlib.com/theme/magazine/#">Science</a></li>
-</ul>
-</div>
-<div class="col-lg-7 post-right">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html">
-<h4>A Discount Toner Cartridge Is
-Better Than Ever.</h4>
-</a>
-<ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-user"></span>Mark wiens</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06 Comments</a></li>
-</ul>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
-</p>
-</div>
-</div>
-<div class="single-latest-post row align-items-center">
-<div class="col-lg-5 post-left">
-<div class="feature-img relative">
-<div class="overlay overlay-bg"></div>
-<img class="img-fluid" src="../static/images/l3.jpg" alt="" data-pagespeed-url-hash="3174403074" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-</div>
-<ul class="tags">
-<li><a href="https://preview.colorlib.com/theme/magazine/#">Travel</a></li>
-</ul>
-</div>
-<div class="col-lg-7 post-right">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html">
-<h4>A Discount Toner Cartridge Is
-Better Than Ever.</h4>
-</a>
-<ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-user"></span>Mark wiens</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06 Comments</a></li>
-</ul>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
-</p>
-</div>
-</div>
-<div class="single-latest-post row align-items-center">
-<div class="col-lg-5 post-left">
-<div class="feature-img relative">
-<div class="overlay overlay-bg"></div>
-<img class="img-fluid" src="../static/images/l4.jpg" alt="" data-pagespeed-url-hash="3468902995" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-</div>
-<ul class="tags">
-<li><a href="https://preview.colorlib.com/theme/magazine/#">Fashion</a></li>
-</ul>
-</div>
-<div class="col-lg-7 post-right">
-<a href="https://preview.colorlib.com/theme/magazine/image-post.html">
-<h4>A Discount Toner Cartridge Is
-Better Than Ever.</h4>
-</a>
-<ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-user"></span>Mark wiens</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-calendar-full"></span>03 April, 2018</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><span class="lnr lnr-bubble"></span>06 Comments</a></li>
-</ul>
-<p>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
-</p>
-</div>
-</div> -->
-</div>
+
 
 
 
