--- a/core/templates/detail_news.html
+++ b/core/templates/detail_news.html
@@ -54,9 +54,12 @@
     <h3>{{ news.title }}</h3>
     </a>
     <ul class="meta pb-20">
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ news.owner }}</a></li>
+        <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{news.views}}</a></li>
     <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ news.created_at }}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 </a></li>
+
+    <li><a href="https://preview.colorlib.com/theme/magazine/image-post.html#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>  {{news_comments_count_detail.count}}  </a></li>
+
+
     </ul>
 
     <p>
@@ -70,7 +73,7 @@
     <div class="comment-sec-area">
     <div class="container">
     <div class="row flex-column">
-    <h6>05 Comments</h6>
+    <h6> {{news_comments_count.count}} Comments</h6>
 
 
         {% for comment in news.comment.all %}
@@ -127,6 +130,15 @@
     </div>
     
     </div>
+
+
+
+
+
+
+
+
+
     <div class="col-lg-4">
     <div class="sidebars-area">
     <div class="single-sidebar-widget editors-pick-widget">
