--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -27,7 +27,7 @@
 
 
 
-{% for i in news %}
+{% for i in news1 %}
 
 <div class="col-lg-8 top-post-left" style="margin-top: 1px;">
 
@@ -45,9 +45,8 @@
 <h3>{{i.title|truncatechars:40}}</h3>
 </a>
 <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ i.owner }}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
     </ul>   
 </div>
 
@@ -79,9 +78,8 @@
     <h4>{{ i.title|truncatechars:40 }} </h4>
     </a>
     <ul class="meta">
-        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ i.owner }}</a></li>
-        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
-        <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+        <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
+        <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
         </ul>
     </div>
     </div>
@@ -106,9 +104,8 @@
 <h4>{{ i.title|truncatechars:40 }} </h4>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ i.owner }}</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+<li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i>{{ i.views }}</a></li>
+<li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ i.created_at }}</a></li>
 </ul>
 </div>
 </div>
@@ -168,9 +165,9 @@
 <h4>{{i.title|truncatechars:40 }}</h4>
 </a>
 <ul class="meta">
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{i.owner}}</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{i.created_at}}</a></li>
-<li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
+<li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{i.owner}}</a></li>
+<li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{i.created_at}}</a></li>
+<li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{i.views}}</a></li>
 </ul>
 <p class="excert">
 {{i.descrtiption|truncatechars:150}}
@@ -217,9 +214,9 @@
 <h3>{{ item.title }}</h3>
 </a>
 <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{item.owner}}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{item.created_at}}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>{{item.views}}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{item.owner}}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{item.created_at}}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{item.views}}</a></li>
     </ul>
 </div>
 </div>
@@ -248,14 +245,16 @@
 <h4 >{{ item.title|truncatechars:30 }}</h4>
 </a>
 <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{item.owner}}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ item.created_at }}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>{{item.views}}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{item.owner}}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{item.created_at}}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{item.views}}</a></li>
     </ul>
 <p class="excert">
 {{item.descrtiption|truncatechars:150}}
 </p>
 </div>
+
+
 </div>
 {% endfor %}
 
@@ -271,7 +270,7 @@
 <img class="img-fluid" src="{{ item.image.url }}" alt="" data-pagespeed-url-hash="3625699152" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
 </div>
 <ul class="tags">
-<li><a href="https://preview.colorlib.com/theme/magazine/#">Travel</a></li>
+<li><a href="">Travel</a></li>
 </ul>
 </div>
 <div class="details">
@@ -279,14 +278,22 @@
 <h4>{{ item.title|truncatechars:30 }}</h4>
 </a>
 <ul class="meta">
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{item.owner}}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ item.created_at }}</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>{{item.views}}</a></li>
+    <li><a href=""><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{item.owner}}</a></li>
+    <li><a href=""><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>{{ item.created_at }}</a></li>
+    <li><a href="#"><i style="margin-right: 6px;" class="fa-solid fa-eye"></i></i>{{item.views}}</a></li>
     </ul>
 <p class="excert">
     {{item.descrtiption|truncatechars:150}}</p>
 </div>
+
+
 </div>
+<div class="col-lg-12" style="margin-top: 15px;">
+    <div class="news-tracker-wrap">
+    <h6><span style="color: black;">Daha çox popular məqalə üçün</span> <a href="/popular_ article" style="color: red;">bura tıklayın</a></h6>
+    </div>
+    </div>
+
 {% endfor %}
 
 
@@ -294,6 +301,7 @@
 
 
 </div>
+
 </div>
 
 
@@ -348,7 +356,6 @@ Better Than Ever.</h4>
 <ul class="meta">
     <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
     <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
     </ul>
 <p class="excert">
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
@@ -373,7 +380,6 @@ Better Than Ever.</h4>
 <ul class="meta">
     <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
     <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
     </ul>
 <p class="excert">
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
@@ -398,7 +404,6 @@ Better Than Ever.</h4>
 <ul class="meta">
     <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
     <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
     </ul>
 <p class="excert">
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.
@@ -436,7 +441,6 @@ Better Than Ever.</h4>
 <ul class="meta">
     <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
     <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
     </ul>
 <p class="excert">
 Lorem ipsum dolor sit amet, consecteturadip isicing elit, sed do eiusmod tempor incididunt ed do eius.
@@ -453,7 +457,6 @@ Online is so easy</h6></a>
 <ul class="meta">
     <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
     <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
     </ul>
 </div>
 </div>
@@ -467,7 +470,6 @@ world famous</h6></a>
 <ul class="meta">
     <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
     <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
     </ul>
 </div>
 </div>
@@ -481,7 +483,6 @@ Development </h6></a>
 <ul class="meta">
     <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>user</a></li>
     <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-calendar-days"></i>12 may 2022</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
     </ul>
 </div>
 </div>
