--- a/core/templates/includes/header.html
+++ b/core/templates/includes/header.html
@@ -66,7 +66,7 @@
     </ul>
     </li>
     <li><a href="https://preview.colorlib.com/theme/magazine/about.html">About</a></li>
-    <li><a href="https://preview.colorlib.com/theme/magazine/contact.html">Contact</a></li>
+    <li><a href="/contact">Contact</a></li>
     </ul>
     </nav>
     <div class="navbar-right">
