--- a/news/templates/news.html
+++ b/news/templates/news.html
@@ -58,7 +58,7 @@
 
     <div class="col-lg-7 post-right">
     <a href="{{i.get_absolute_url}}">
-    <h4>{{ i.title }}</h4>
+    <h4>{{ i.title|truncatechars:40 }}</h4>
     </a>
     <ul class="meta">
         <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-user"></i>{{ i.owner }}</a></li>
@@ -66,7 +66,7 @@
         <li><a href="https://preview.colorlib.com/theme/magazine/#"><i style="margin-right: 6px;" class="fa-solid fa-comment"></i>06 Comments</a></li>
         </ul> 
     <p class="excert">
-    {{i.descrtiption}}
+    {{i.descrtiption|truncatechars:200}}
     </p>
     </div>
 
@@ -323,29 +323,25 @@
     
     
     
-    <script src="./MagazineNews_files/jquery-2.2.4.min.js"></script>
-    <script src="./MagazineNews_files/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="./MagazineNews_files/vendor,_bootstrap.min.js+easing.min.js+hoverIntent.js+superfish.min.js+jquery.ajaxchimp.min.js+jquery.magnific-popup.min.js.pagespeed.jc.4hqUlCTjA9.js"></script><script>eval(mod_pagespeed_LjwYg_bxMe);</script>
-    <script src="./MagazineNews_files/js"></script>
-    <script>eval(mod_pagespeed_toGqkj3qZT);</script>
-    <script>eval(mod_pagespeed_g3Fg5HhNBX);</script>
-    <script>eval(mod_pagespeed_G2m$0isqjq);</script>
-    <script>eval(mod_pagespeed_676Td6U86F);</script>
-    <script>eval(mod_pagespeed_IQezO6iasT);</script>
-    <script src="./MagazineNews_files/mn-accordion.js"></script>
-    <script src="./MagazineNews_files/jquery-ui.js"></script>
-    <script src="./MagazineNews_files/jquery.nice-select.min.js+owl.carousel.min.js+mail-script.js.pagespeed.jc.P4rtdDYe94.js"></script><script>eval(mod_pagespeed_AZJLz1Fkz7);</script>
-    <script>eval(mod_pagespeed_zvKAYx$6uz);</script>
-    <script>eval(mod_pagespeed_9CfZm93hpF);</script>
-    <script src="./MagazineNews_files/main.js"></script>
-    
-    <script async="" src="./MagazineNews_files/js(1)"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'UA-23581568-13');
-    </script>
-    <script defer="" src="./MagazineNews_files/v652eace1692a40cfa3763df669d7439c1639079717194" integrity="sha512-Gi7xpJR8tSkrpF7aordPZQlW2DLtzUlZcumS8dMQjwDHEnw9I7ZLyiOj/6tZStRBGtGgN6ceN6cMH8z7etPGlw==" data-cf-beacon="{&quot;rayId&quot;:&quot;70843aca299b1695&quot;,&quot;token&quot;:&quot;cd0b4b3a733644fc843ef0b185f98241&quot;,&quot;version&quot;:&quot;2021.12.0&quot;,&quot;si&quot;:100}" crossorigin="anonymous"></script>
+    <script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
+<script src="{% static 'js/vendor,_bootstrap.min.js+easing.min.js+hoverIntent.js+superfish.min.js+jquery.ajaxchimp.min.js+jquery.magnific-popup.min.js.pagespeed.jc.4hqUlCTjA9.js' %}"></script><script>eval(mod_pagespeed_LjwYg_bxMe);</script>
+<script>eval(mod_pagespeed_toGqkj3qZT);</script>
+<script>eval(mod_pagespeed_g3Fg5HhNBX);</script>
+<script>eval(mod_pagespeed_G2m$0isqjq);</script>
+<script>eval(mod_pagespeed_676Td6U86F);</script>
+<script>eval(mod_pagespeed_IQezO6iasT);</script>
+<script src="{% static 'js/jquery-ui.js' %}"></script>
+<script src="{% static 'js/jquery.nice-select.min.js+owl.carousel.min.js+mail-script.js.pagespeed.jc.P4rtdDYe94.js' %}"></script><script>eval(mod_pagespeed_AZJLz1Fkz7);</script>
+<script>eval(mod_pagespeed_zvKAYx$6uz);</script>
+<script>eval(mod_pagespeed_9CfZm93hpF);</script>
+<script src="{% static 'js/main.js' %}"></script>
+
+<script async="" src="{% static 'js/js.js' %}"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-23581568-13');
+</script>
     {% endblock %}
