--- a/article/templates/popular_article.html
+++ b/article/templates/popular_article.html
@@ -20,10 +20,10 @@
     <div class="container no-padding">
     <div class="row">
     <div class="col-lg-12">
-    <div class="hero-nav-area">
-    <h1 class="text-white">Archive Posts</h1>
-    <p class="text-white link-nav"><a href="https://preview.colorlib.com/theme/magazine/index.html">Home </a> <span class="lnr lnr-arrow-right"></span><a href="https://preview.colorlib.com/theme/magazine/archive.html">Archive Posts </a></p>
-    </div>
+      <div class="hero-nav-area">
+        <h1 class="text-white">Bütün popular məqalələr</h1>
+        <p class="text-white link-nav"><a href="#home">Ana səhifə </a> <i class="fa-solid fa-angle-right"></i><a href="#">Bütün popular məqalələr </a></p>
+        </div>
     </div>
     <div class="col-lg-12">
     <div class="news-tracker-wrap">
@@ -41,7 +41,7 @@
     <div class="col-lg-8 post-list">
     
     <div class="latest-post-wrap">
-    <h4 class="cat-title">All Article</h4>
+    <h4 class="cat-title">Bütün popular məqalələr</h4>
     {% for i in popular_article %}
     <div class="single-latest-post row align-items-center">
     <div class="col-lg-5 post-left">
