--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -21,8 +21,8 @@
     <div class="row">
     <div class="col-lg-12">
     <div class="hero-nav-area">
-    <h1 class="text-white">Contact Us</h1>
-    <p class="text-white link-nav"><a href="https://preview.colorlib.com/theme/magazine/index.html">Home </a> <span class="lnr lnr-arrow-right"></span><a href="https://preview.colorlib.com/theme/magazine/contact.html">Contact Us </a></p>
+    <h1 class="text-white">Əlaqə</h1>
+    <p class="text-white link-nav"><a href="/home">Home </a> <i class="fa-solid fa-angle-right"></i><a href="#">Əlaqə </a></p>
     </div>
     </div>
     </div>
@@ -37,7 +37,7 @@
     <div class="col-lg-3 d-flex flex-column address-wrap">
     <div class="single-contact-address d-flex flex-row">
     <div class="icon">
-    <span class="lnr lnr-home"></span>
+    <span class="lnr"> <i class="fa-solid fa-house"></i> </span>
     </div>
     <div class="contact-details">
     <h5>Los Angeles, USA</h5>
@@ -48,7 +48,7 @@
     </div>
     <div class="single-contact-address d-flex flex-row">
     <div class="icon">
-    <span class="lnr lnr-phone-handset"></span>
+    <span class="lnr "> <i class="fa-solid fa-phone"></i></span>
     </div>
     <div class="contact-details">
     <h5>00 (440) 9865 562</h5>
@@ -57,7 +57,7 @@
     </div>
     <div class="single-contact-address d-flex flex-row">
     <div class="icon">
-    <span class="lnr lnr-envelope"></span>
+    <span class="lnr "> <i class="fa-solid fa-envelope"></i> </span>
     </div>
     <div class="contact-details">
     <h5>support@colorlib.com</h5>
