contact, career center

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -336,8 +336,66 @@
 
 
 <div class="relavent-story-post-wrap mt-30">
-<h4 class="title">Relavent Stories</h4>
-<div class="relavent-story-list-wrap">
+<h4 class="title">Kariyera Mərkəzi</h4>
+
+
+
+
+
+<div class="container">
+    <div class="row">
+
+
+        <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-blue order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20 order-card">Orders Received</h6>
+                    <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>486</span></h2>
+                    <p class="m-b-0">Completed Orders<span class="f-right">351</span></p>
+                </div>
+            </div>
+        </div>
+        
+        <!-- <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-green order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20 order-card">Orders Received</h6>
+                    <h2 class="text-right"><i class="fa fa-rocket f-left"></i><span>486</span></h2>
+                    <p class="m-b-0">Completed Orders<span class="f-right">351</span></p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-yellow order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20 order-card">Orders Received</h6>
+                    <h2 class="text-right"><i class="fa fa-refresh f-left"></i><span>486</span></h2>
+                    <p class="m-b-0">Completed Orders<span class="f-right">351</span></p>
+                </div>
+            </div>
+        </div>
+        
+        <div class="col-md-4 col-xl-3">
+            <div class="card bg-c-pink order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20 order-card">Orders Received</h6>
+                    <h2 class="text-right"><i class="fa fa-credit-card f-left"></i><span>486</span></h2>
+                    <p class="m-b-0">Completed Orders<span class="f-right">351</span></p>
+                </div>
+            </div>
+        </div> -->
+
+
+	</div>
+</div>
+
+
+
+
+
+
+<!-- <div class="relavent-story-list-wrap">
 <div class="single-relavent-post row align-items-center">
 <div class="col-lg-5 post-left">
 <div class="feature-img relative">
@@ -410,8 +468,16 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 </p>
 </div>
 </div>
+</div> -->
 </div>
-</div>
+
+
+
+
+
+
+
+
 
 
 
@@ -651,27 +717,6 @@ Development </h6>
 </div>
 
 
-<script src="{% static 'js/jquery-2.2.4.min.js' %}"></script>
-<script src="{% static 'js/vendor,_bootstrap.min.js+easing.min.js+hoverIntent.js+superfish.min.js+jquery.ajaxchimp.min.js+jquery.magnific-popup.min.js.pagespeed.jc.4hqUlCTjA9.js' %}"></script><script>eval(mod_pagespeed_LjwYg_bxMe);</script>
-<script>eval(mod_pagespeed_toGqkj3qZT);</script>
-<script>eval(mod_pagespeed_g3Fg5HhNBX);</script>
-<script>eval(mod_pagespeed_G2m$0isqjq);</script>
-<script>eval(mod_pagespeed_676Td6U86F);</script>
-<script>eval(mod_pagespeed_IQezO6iasT);</script>
-<script src="{% static 'js/jquery-ui.js' %}"></script>
-<script src="{% static 'js/jquery.nice-select.min.js+owl.carousel.min.js+mail-script.js.pagespeed.jc.P4rtdDYe94.js' %}"></script><script>eval(mod_pagespeed_AZJLz1Fkz7);</script>
-<script>eval(mod_pagespeed_zvKAYx$6uz);</script>
-<script>eval(mod_pagespeed_9CfZm93hpF);</script>
-<script src="{% static 'js/main.js' %}"></script>
-
-<script async="" src="{% static 'js/js.js' %}"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-23581568-13');
-</script>
 
 
 {% endblock %}
