--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -313,28 +313,6 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <div class="relavent-story-post-wrap mt-30">
 <h4 class="title">Kariyera Mərkəzi</h4>
 
@@ -345,47 +323,30 @@
 <div class="container">
     <div class="row">
 
-
-        <div class="col-md-4 col-xl-3">
-            <div class="card bg-c-blue order-card">
-                <div class="card-block">
-                    <h6 class="m-b-20 order-card">Orders Received</h6>
+            {% for i in career_center %}
+            <div class="col-md-4 col-xl-3">
+                <div class="card bg-c-blue order-card">
+                    <img src="{{ i.logo.url }}" alt="">
+                <!-- <div class="card-block">
+                    <h6 class="m-b-20 order-card">{{ i.tittle }}</h6>
                     <h2 class="text-right"><i class="fa fa-cart-plus f-left"></i><span>486</span></h2>
                     <p class="m-b-0">Completed Orders<span class="f-right">351</span></p>
-                </div>
-            </div>
-        </div>
-        
-        <!-- <div class="col-md-4 col-xl-3">
-            <div class="card bg-c-green order-card">
-                <div class="card-block">
-                    <h6 class="m-b-20 order-card">Orders Received</h6>
-                    <h2 class="text-right"><i class="fa fa-rocket f-left"></i><span>486</span></h2>
-                    <p class="m-b-0">Completed Orders<span class="f-right">351</span></p>
-                </div>
-            </div>
-        </div>
-        
-        <div class="col-md-4 col-xl-3">
-            <div class="card bg-c-yellow order-card">
-                <div class="card-block">
-                    <h6 class="m-b-20 order-card">Orders Received</h6>
-                    <h2 class="text-right"><i class="fa fa-refresh f-left"></i><span>486</span></h2>
-                    <p class="m-b-0">Completed Orders<span class="f-right">351</span></p>
-                </div>
-            </div>
-        </div>
-        
-        <div class="col-md-4 col-xl-3">
-            <div class="card bg-c-pink order-card">
-                <div class="card-block">
-                    <h6 class="m-b-20 order-card">Orders Received</h6>
-                    <h2 class="text-right"><i class="fa fa-credit-card f-left"></i><span>486</span></h2>
-                    <p class="m-b-0">Completed Orders<span class="f-right">351</span></p>
-                </div>
-            </div>
-        </div> -->
+                </div> -->
+           </div>
+           
+           <h5 style="font-family: 'Roboto Mono', monospace;">{{ i.title }}</h5>
+           <p style="text-align: center;">{{ i.company }}</p>
 
+        </div>
+        
+        {% endfor %}
+
+        <div class="col-lg-12" style="margin-top: 15px;">
+            <div class="news-tracker-wrap">
+                <hr>
+            <h6><span style="color: black;">Daha çox iş elanı üçün</span> <a href="/career_center" style="color: red;">bura tıklayın</a></h6>
+            </div>
+            </div>
 
 	</div>
 </div>
